comitted library agenticai code

--- a/AgenticAI/graph_parallel_nodes.ipynb
+++ b/AgenticAI/graph_parallel_nodes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d49998c9",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "6e33d587",
    "metadata": {},
    "outputs": [
@@ -42,8 +42,8 @@
       "  | __end__ |    \n",
       "  +---------+    \n",
       "A ran\n",
-      "C ran\n",
-      "B ran\n"
+      "B ran\n",
+      "C ran\n"
      ]
     }
    ],
@@ -75,6 +75,31 @@
     "print(graph.get_graph().draw_ascii())\n",
     "graph.invoke({})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9a2a4026",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph saved as graph_parallel.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "graph.get_graph().draw_png(\"images/graph_parallel.jpg\")\n",
+    "print(\"Graph saved as graph_parallel.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41f5adcb",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
