--- a/AgenticAI/graph_with_state.ipynb
+++ b/AgenticAI/graph_with_state.ipynb
@@ -1,29 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "381c70f7",
-   "metadata": {},
-   "source": [
-    "### Build simple sequential graph using LangGraph"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "b4243714",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# python -m venv .venv\n",
-    "# source .venv/bin/activate\n",
-    "# pip install langgraph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "847cdcf1",
+   "execution_count": 1,
+   "id": "f4e8c6da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "e03ddf83",
+   "execution_count": 5,
+   "id": "1d07d6fb",
    "metadata": {},
    "outputs": [
     {
@@ -61,58 +41,57 @@
       " +---------+   \n",
       " | __end__ |   \n",
       " +---------+   \n",
-      "Graph saved as graph.png\n",
+      "Graph saved as graph_with_state.png\n",
       "A ran\n",
-      "B ran\n"
+      "Node A is 10 years old\n",
+      "B ran\n",
+      "Node B is 15 years old\n",
+      "{'name': 'Node B', 'age': 15}\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{}"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def node_a_tool(_):\n",
+    "from typing import TypedDict, Optional\n",
+    "from langgraph.graph import StateGraph, START, END\n",
+    "\n",
+    "class MyState(TypedDict):\n",
+    "    name: Optional[str]\n",
+    "    age: Optional[str]\n",
+    "\n",
+    "\n",
+    "def node_a(state: MyState) -> MyState:\n",
     "    print(\"A ran\")\n",
-    "    return{}\n",
+    "    state[\"name\"] = \"Node A\"\n",
+    "    state[\"age\"] = 10\n",
+    "    print(f\"{state[\"name\"]} is {state[\"age\"]} years old\")\n",
+    "    return state\n",
     "\n",
-    "def node_b_tool(_):\n",
+    "\n",
+    "def node_b(state: MyState) -> MyState:\n",
     "    print(\"B ran\")\n",
-    "    return{}\n",
+    "    state[\"name\"] = \"Node B\"\n",
+    "    state[\"age\"] = (state[\"age\"] or 0) + 5\n",
+    "    print(f\"{state[\"name\"]} is {state[\"age\"]} years old\")\n",
+    "    return state\n",
     "\n",
-    "builder = StateGraph(dict)\n",
-    "builder.add_node(\"A\", node_a_tool)\n",
-    "builder.add_node(\"B\", node_b_tool)\n",
+    "builder = StateGraph(MyState)\n",
+    "builder.add_node(\"A\", node_a)\n",
+    "builder.add_node(\"B\", node_b)\n",
     "\n",
     "builder.add_edge(START, \"A\")\n",
     "builder.add_edge(\"A\", \"B\")\n",
-    "builder.add_edge(\"A\", END)\n",
+    "builder.add_edge(\"B\", END)\n",
     "\n",
     "graph = builder.compile()\n",
     "\n",
-    "# --- Display as ASCII ----\n",
+    "\n",
     "print(graph.get_graph().draw_ascii())\n",
+    "graph.get_graph().draw_png(\"images/graph_with_state.png\")\n",
+    "print(\"Graph saved as graph_with_state.png\")\n",
     "\n",
-    "graph.get_graph().draw_png(\"images/graph_sequential.jpg\")\n",
-    "print(\"Graph saved as graph.png\")\n",
-    "\n",
-    "initial_state = {}\n",
-    "graph.invoke(initial_state)"
+    "result = graph.invoke({})\n",
+    "print(result)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cdcb62ba",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
